# PdfStampTools

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: test.yml
PdfStampTools/: __init__.py  functions.py
tests/: .latexmkrc  input.tex  test_stamp.py
