[metadata]
name = PdfStampTools
version = attr: PdfStampTools.__init__.__version__
author = Yuu Miino
description = A package for stamping images, texts, and pages on a PDF file.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Yuu-Miino-NUE/PdfStampTools
python_requires = >=3.11, <4
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = PdfStampTools
install_requires =
    PyPDF2
    reportlab